--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -54,8 +54,8 @@
     ],
 
     "emailjs": {
-        "publicKey": "tzObcsmOwHvPy6Rhp",
-        "serviceId": "service_4h8g7vb",
-        "templateId": "template_seyjkzn"
+        "publicKey": "",
+        "serviceId": "",
+        "templateId": ""
     }
 }
